--- a/css/style2.css
+++ b/css/style2.css
@@ -56,3 +56,20 @@ html, body {
     display: block; 
     width: 100%;
 }
+
+::-webkit-scrollbar {
+    width: 12px; 
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #FCC6FF; 
+    border-radius: 10px; 
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+    border-radius: 10px; 
+}
+
+scrollbar-color: #FCC6FF #f1f1f1;
+scrollbar-width: thin;
